# chatbot

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODING_AGENT.md  DOCKER_CI_PLAN.md  DOCUMENTATION_AUDIT_SUMMARY.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  Makefile  README.md  TODOS.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: llm-pipeline.md  memory-specialist.md  planner.md  prompt-engineer.md  refactor-mover.md  reviewer.md  security-reviewer.md  telegram-handler.md  tester.md
.claude/commands/: add-feature.md  check.md  implement.md  refactor-phase.md  review.md  ship.md
.claude/rules/: aiogram.md  debugging.md  langchain.md  memory-system.md  python-style.md  testing.md  verification.md
.claude/skills/add-handler/: SKILL.md
.claude/skills/add-migration/: SKILL.md
.claude/skills/add-service/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/prompt-review/: SKILL.md
.claude/skills/verify-imports/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
ARCHITECTURE/: MEMORY_DESIGN.md
docs/: AI_COMPANION_IDEAS.md  ARTIFACTS.md  CHARACTER_SETUP.md  MEMORY_CLEANUP.md  STATUS.md
docs/roadmap/: MEMORY_ROADMAP.md
docs/tasks/memory/: 00_epics.md  10_task_breakdown.md
prompts/: persona.md
src/bot/: __main__.py  adapters.py  app.py  character.py  chat_pipeline.py  config.py  handlers.py  ports.py  webhooks.py  wiring.py
src/bot/adapters/: __init__.py  proactive_scheduler.py  telegram_delivery.py
src/bot/conversation/: context_builder.py  episode_manager.py  episode_switcher.py  summarizer.py  system_prompt.py
src/bot/infra/: db_client.py  langfuse_service.py
src/bot/llm/: service.py
src/bot/media/: artifact_service.py  image_service.py  storage_backend.py
src/bot/memory/: cleanup.py  cognee_service.py  fact_extractor.py  mem0_service.py  models.py  profile_builder.py  relationship_scorer.py
src/bot/scripts/: __init__.py  memory_cleanup.py
src/bot/services/: __init__.py  artifact_service.py  cognee_memory_service.py  context_builder.py  db_client.py  episode_manager.py  episode_switcher.py  image_service.py  langfuse_service.py  llm_service.py  mem0_memory_service.py  memory_cleanup.py  memory_models.py  proactive_scheduler.py  storage_backend.py  summarizer.py  system_prompt.py
src/bot/tools/: __init__.py  import_card.py  time_tool.py  weather_tool.py
src/tg_virtual_girlfriend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
supabase_migrations/migrations/: 001_initial_schema.sql  002_memory_schema.sql  003_artifacts_schema.sql  004_monetization_updates.sql  005_fix_get_or_create_thread_auto_provision.sql  006_rpc_returns_full_rows.sql  007_mem0_memories_table.sql  008_character_mvp.sql  009_character_assets_bucket.sql  010_launch_readiness.sql  011_user_facts.sql
tests/: test_adapters.py  test_artifact_service.py  test_character.py  test_chat_pipeline.py  test_cognee_memory_service.py  test_context_builder.py  test_db_client.py  test_episode_manager.py  test_episode_switcher.py  test_fact_extractor.py  test_handlers.py  test_handlers_llm_integration.py  test_image_service.py  test_import_card.py  test_langfuse_service.py  test_llm_service.py  test_mem0_memory_service.py  test_memory_cleanup.py  test_memory_schema.py  test_memory_writing.py  test_monetization.py  test_placeholder.py  test_ports.py  test_proactive_enhanced.py  test_proactive_scheduler.py  test_profile_builder.py  test_relationship_scorer.py  test_subscription_service.py  test_summarizer.py  test_system_prompt.py  test_vision.py  test_vision_service.py  test_wiring.py
