[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-virtual-girlfriend"
version = "0.1.0"
description = "Telegram chatbot (aiogram) with LangChain/LangGraph + mem0 memory + image generation"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.4",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "loguru>=0.7",

  # LangChain stack (minimal core + graph orchestration)
  "langchain-core>=0.2",
  "langchain-community>=0.2",
  "langgraph>=0.2",

  # Memory (mem0 client)
  "mem0ai>=0.1.20",

  # Optional: storage
  "redis>=5.0",

  # Database (Supabase)
  "supabase>=2.0",

  # Math/ML utilities
  "numpy>=1.26",
]

[project.optional-dependencies]
images = [
  "openai>=1.40",
  "pillow>=10.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pyright>=1.1",
]

[project.scripts]
bot = "bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
root = "src"

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
    "src/bot/webhooks.py",  # Optional module with heavy dependencies (fastapi, stripe, paddle)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
