[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[project]
name = "tg-virtual-girlfriend"
version = "0.1.0"
description = "Telegram chatbot (aiogram) with LangChain/LangGraph + cognee memory + image generation"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.4",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "loguru>=0.7",
  # LangChain stack (minimal core + graph orchestration)
  "langchain-core>=0.2",
  "langchain-community>=0.2",
  "langchain-openai>=0.1",
  "langgraph>=0.2",
  # Observability
  "langfuse>=2.0",
  # Memory (cognee knowledge graph)
  "cognee>=0.1.21",
  # Optional: storage
  "redis>=5.0",
  # Proactive messaging scheduler
  "apscheduler>=3.10",
  # Database (Supabase)
  "supabase>=2.0",
  # Math/ML utilities
  "numpy>=1.26",
]

[project.optional-dependencies]
images = [
  "openai>=1.40",
  "pillow>=10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pyright>=1.1",
]

[project.scripts]
bot = "bot.__main__:main"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "bot"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes — undefined names, unused imports
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort — import sorting
    "UP",     # pyupgrade — modernize to 3.12+ syntax
    "B",      # bugbear — common bug patterns
    "SIM",    # simplify — collapsible ifs, ternaries
    "ASYNC",  # async anti-patterns — blocking calls, missing awaits
    "C4",     # comprehensions — unnecessary list/dict calls
    "PIE",    # misc anti-patterns — unnecessary pass, spread
    "T20",    # print — catch stray print() in production code
    "RUF",    # ruff-specific — mutable defaults, ambiguous chars
]
ignore = [
    "B008",   # function-call-in-default-argument (pydantic Field() false positives)
    "RUF001", # ambiguous-unicode-character-string (Russian-language bot, Cyrillic is intentional)
    "RUF005", # collection-literal-concatenation (readability preference)
    "RUF012", # mutable-class-variable (pydantic model false positives)
    "RUF059", # unused-unpacked-variable (valid patterns like `done, _ = await asyncio.wait(...)`)
    "SIM108", # if-else-block-instead-of-if-exp (ternary not always clearer)
]
fixable = ["ALL"]
unfixable = ["F841"]  # unused variables — don't auto-delete

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]                       # unused imports (re-exports)
"tests/**" = ["T20"]                            # print OK in tests
"src/bot/scripts/**" = ["T20"]                 # print() is correct in CLI scripts

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = [
    "src/bot/webhooks.py",  # Optional module with heavy dependencies (fastapi, stripe, paddle)
]
useLibraryCodeForTypes = false
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportMatchNotExhaustive = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests taking >2s (skip with -m 'not slow')",
    "integration: tests requiring external services",
]

[tool.coverage.run]
source = ["src/bot"]
branch = true
omit = ["src/bot/__main__.py", "src/bot/webhooks.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
